# lightwood

./: .bashrc  .buildinfo  .coverage  .env  .flake8  .gitignore  .pre-commit-config.yaml  .prospector.yml  .travis.yml  =  =0.20.0  =0.22.1  AI2.json  AI2_timeseries.json  CNAME  CONTRIBUTING.md  MANIFEST.in  README.md  TODO.md  __init__.py  a_path.pickle  analysis.html  api.html  config.json  config_example.json  data.html  dynamic_predictor.py  encoder.html  ensemble.html  experiment.py  genindex.html  helpers.html  index.html  install.sh  lightwood.md  lightwood_philosophy.html  mixer.html  model_analysis_sample.json  objects.inv  optional_requirements.txt  (+27 more)
.github/ISSUE_TEMPLATE/: bug_report.md  question.md  suggestion.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: analysis.yml  benchmark_check.yml  cla.yml  doc_build.yml  lightwood.yml  lightwood_publish.yml  ligthtwood.yml  release.yml
_modules/: index.html
_modules/api/: dtype.html  high_level.html  json_ai.html  predictor.html  types.html
_sources/: analysis.rst.txt  api.rst.txt  encoder.rst.txt  ensemble.rst.txt  index.rst.txt
_sources/api/: dtype.rst.txt
_static/: documentation_options.js
api/: dtype.html  encode.html  high_level.html  json_ai.html  predictor.html  types.html
dev/: README.md
docs/: .buildinfo  CNAME  README.md  analysis.html  api.html  data.html  docs_HOWTO.md  encoder.html  ensemble.html  genindex.html  helpers.html  index.html  lightwood_philosophy.html  mixer.html  mkdocs.yml  objects.inv  py-modindex.html  search.html  searchindex.js  tutorials.html
docs/.doctrees/: api.doctree  index.doctree  lightwood_philosophy.doctree  tutorials.doctree
docs/_build/: genindex.html  index.html  lightwood_philosophy.html
docs/_modules/: index.html
docs/_sources/: api.rst.txt  data.rst.txt  index.rst.txt  lightwood_philosophy.rst.txt  tutorials.rst.txt
docs/_static/: custom.css
docs/api/: dtype.html  encode.html  high_level.html  json_ai.html  predictor.html  types.html
docs/data/: cleaner.html
docs/docs/: API.md  command_line.md  index.md
docs/examples/: cifar_100.py  classification.py  home_rentals.py  learn_to_classify.py  learn_to_correlate.py  learn_to_multiply.py  multilabel_classification.py  time_series.py
docs/mixer/: mixer.html
docs/site/: 404.html  index.html  sitemap.xml
docs/source/: conf.py  index.rst
docssrc/: Makefile  README.md  compile_docs.sh  notes.txt  t.txt
docssrc/source/: api.rst  conf.py  data.rst  encoder.rst  helpers.rst  index.rst  lightwood_philosophy.rst  mixer.rst  tutorials.rst
examples/: Tutorial - Statistical analyzer introduction.ipynb  classification.py
examples/default_of_credit/: train_test_model.py
examples/json_ai/: Tutorial - Custom analysis.ipynb  Tutorial_Custom_Mixer.ipynb
lightwood/: __about__.py  __init__.py  version.py
lightwood/analysis/: __init__.py  acc_stats.py  analyze.py  base.py  explain.py  model_analyzer.py
lightwood/api/: __init__.py  config.py  data_source.py  dtype.py  encode.py  ensemble.py  generate_config.py  generate_json_ai.py  generate_json_ml.py  generate_predictor.py  gym.py  high_level.py  json_ai.py  predictor.py  test.json  types.py
lightwood/classes/: column_abstract.py  dataset.py
lightwood/config/: config.py
lightwood/constants/: lightwood.py
lightwood/data/: __init__.py  cleaner.py  encoded_ds.py  infer_types.py  splitter.py  statistical_analysis.py  timeseries_analyzer.py  timeseries_transform.py
lightwood/data_schemas/: definition.py  predictor_config.py
lightwood/encoder/: __init__.py  base.py  helpers.py
lightwood/encoders/: __init__.py  encoder_base.py
lightwood/ensemble/: __init__.py  base.py  best_model.py  best_of.py  embed.py  identity.py  mean_ensemble.py  median_ensemble.py  mode_ensemble.py  stacked_ensemble.py  ts_mean_ensemble.py  ts_stacked_ensemble.py  weighted_mean_ensemble.py
lightwood/helpers/: __init__.py  accuracy.py  codegen.py  constants.py  device.py  factory.py  general.py  imputers.py  io.py  log.py  numeric.py  parallelism.py  rnn_helpers.py  seed.py  splitting.py  templating.py  text.py  torch.py  ts.py
lightwood/lightwood/: __about__.py
lightwood/logger/: logger.py
lightwood/mixer/: __init__.py  arima.py  base.py  ets.py  gluonts.py  lightgbm.py  lightgbm_array.py  neural.py  neural_ts.py  nhits.py  prophet.py  qclassic.py  quantum.py  random_forest.py  regression.py  ridge_regression.py  sktime.py  tabtransformer.py  unit.py  xgboost.py  xgboost_array.py
lightwood/mixers/: __init__.py  arima.py  base_mixer.py  boost.py  lightgbm.py  lightgbm_array.py  neural.py  nn.py  regression.py  sklearn_mixer.py  tsnn.py  unit.py
lightwood/model/: __init__.py  base.py  lightgbm.py  lightgbm_array.py  neural.py  nn.py  regression.py  sktime.py  ts_neural.py  unit.py
lightwood/model_building/: __init__.py
lightwood/shared/: helpers.py
mixer/: mixer.html
mixer/helpers/: helpers.html
oldwood/: __init__.py
oldwood/api/: data_source.py  predictor.py
requirements_old/: pyproject_old.toml  requirements.in  requirements_dev.txt  requirements_extra_ts.txt  requirements_image.txt  setup_old.py
scraps/: README.md  mixer_with_gym_incomplete.py
tests/: conftest.py  plugin.py  requirements.txt  static_analysis.json
tutorials/: README.html
(+607 files in other folders)
