[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "lightwood"
version = "25.5.2.2"
description = "Lightwood is Legos for Machine Learning."
authors = ["MindsDB Inc."]
license = "GPL-3.0-only"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
type_infer = "0.0.22"
dataprep_ml = "0.0.24"
mindsdb-evaluator = "0.0.17"
numpy = ">1.23.0"
nltk = ">=3.9"
pandas = "2.2.3"
torch = ">=2.4.1"
requests = ">=2.0.0"
transformers = ">=4.48.0"
optuna = ">=3.6.2,<4.0.0"
optuna-integration = ">=3.6.0,<4.0.0"
scipy = ">=1.5.4"
psutil = ">=5.7.0"
scikit-learn = "==1.5.2"
dataclasses_json = ">=0.5.4"
dill = "==0.3.6"
sktime = "==0.30.0"
statsforecast = "~=1.6.0"
torch_optimizer = "==0.1.0"
black = "==24.3.0"
typing_extensions = ">= 4.8.0"
colorlog = "==6.5.0"
xgboost = ">=1.6.0, <=1.8.0"
tab-transformer-pytorch = ">= 0.2.1"

# dependencies for optional packages
autopep8 = {version = ">=1.5.7", optional = true}
flake8 = {version = ">=6.0.0", optional = true}
librosa = {version = "==0.8.1", optional = true}
lightgbm = {version = ">=4.6.0,<4.7.0", optional = true}
pystan = {version = "==2.19.1.1", optional = true}
prophet = {version = "==1.1", optional = true}
neuralforecast = {version = ">=1.6.4,<1.7.0", optional = true}
mxnet = {version = ">=1.6.0,<2.0.0", optional = true}
gluonts = {version = ">=0.13.2,<0.14.0", optional = true}
torchvision = {version = ">=0.15.0", optional = true}
pillow = {version = ">=10.3.0", optional = true}
qiskit = {version = "==1.4.2", optional = true}
shap = {version = ">=0.40.0", optional = true}
pyod = {version = "==1.0.4", optional = true}
suod = {version = ">=0.1.3", optional = true}

[tool.poetry.extras]
dev = [
    "autopep8",
    "flake8",
]
audio = [
    "librosa",
]
extra = [
    "lightgbm",
]
extra_ts = [
    "pystan",
    "prophet",
    "neuralforecast",
    "mxnet",
    "gluonts",
]
image = [
    "torchvision",
    "pillow",
]
quantum = [
    "qiskit",
]
xai = [
    "shap",
    "pyod",
    "suod",
]
